# SpheroTracker

./: README.md  pyproject.toml
sphero_tracker/: C920.py  VideoStream.py  experiment.py  graphics.py  main.py  server.py  trackable_object.py  tracker.py  tracker_filters.py  tracking_sample.py
sphero_tracker/templates/: index.html
sphero_tracker/util/: __init__.py  vector.py
sphero_tracker/webcam/: c920.py
