[tool.poetry]
name = "sphero-tracker"
version = "0.1.0"
description = ""
authors = ["Richard Beattie <richard.beattie91@gmail.com>"]
readme = "README.md"
packages = [{include = "sphero_tracker"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "4.6.0.66"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"
