[tool.poetry]
name = "sphero-tracker"
version = "0.1.0"
description = ""
authors = ["Richard Beattie <richard.beattie91@gmail.com>"]
readme = "README.md"
packages = [{include = "sphero_tracker"}]

[tool.poetry.dependencies]
python = "3.9.2"
opencv-python = "4.4.0.46"
flask = "^2.3.2"
imutils = "^0.5.4"
opencv-contrib-python = "4.4.0.46"
scipy = "1.8.1"
filterpy = "1.4.5"
scikit-image = "0.17.2"
lap = "0.4.0"
spherov2 = {path = "/home/rbeattie/Documents/spherov2.py/", develop=true }
bluezpy = {path = "/home/rbeattie/Documents/bluezpy/", develop=true }
bleak = "^0.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"
